# active_window

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
active_window/: __main__.py  parse.py
